test/sema/typeck/ref/ref-with-type-params.out
error: no type params allowed
--> ref-with-type-params.dora:3:14
 | fn test() {
 |     let foo: Int32 = 42;
 |     let _x = ref foo[Int32];
                ~~~~~~~~~~~~~~
 | }
 | 
1 error found.
